# fetch_tinyusb

./: CMakeLists.txt  tinyusb.cmake  tusb_config.h
firmware/tinyusb/: CMakeLists.txt  tinyusb.cmake  tusb_config.h
